Wed Jun 11 18:36:32 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Workspace_Generators.cpp:

          Bug fix where the auto-generated workspace was not building
          the event types used by the implemenations.

Wed Jun 11 15:06:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Ctx.h:
        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Ctx.cpp:
        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.h:
        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.cpp:
        * MDE/GME/paradigms/PICML/be/CAPI/XML_Mapping_File_Generator.cpp:

          . Fixed compilation errors. This will require you to update your
            CoSMIC sandbox.

          . Moved all the context-specific implementation from
            CAPI_Generators.{h, cpp} to CAPI_Ctx.{h,cpp}.

Wed Jun 11 14:22:36 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/BE_Condition_Parser_T.h:
        * MDE/GME/paradigms/PICML/be/BE_Condition_Parser_T.cpp:

        * MDE/GME/paradigms/PICML/be/BE.mpc:

          Added new source/template files to the project.

        * etc/config/picml_udm.mpb:

          Derived this project from the cosmis_utils project, so many
          helper methods in CoSMIC are now usable in CUTS backend
          generators.

        * MDE/GME/paradigms/PICML/be/BE_Manager_T.cpp:
        * MDE/GME/paradigms/PICML/be/BE_Generators_T.h:

          . Implemented the following points-of-generation:

            . CUTS_BE_Initialize_T - signal the backend generator to
              initialize itself, and that parsing is about to begin.

            . CUTS_BE_Finalize_T - signal the backend generator to
              finalize itself, and that parsing has ended.

          . Started documenting the different points-of-configuration
            and points-of-generation.

        * MDE/GME/paradigms/PICML/be/CAPI/CAPI.mpc: